--- a/recipes/maandazi.html
+++ b/recipes/maandazi.html
@@ -49,6 +49,6 @@
         paper towels. Repeat with remaining dough.</li>
 
     </ol>
-    
+    <a href="../index.html">Home</a>
 </body>
 </html>
